<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_jump_to_today">Today</string>
    <string name="action_update">Update</string>
    <string name="action_edit_my_courses">Edit my courses</string>
    <string name="action_before">Before</string>
    <string name="action_next">Next</string>
    <string name="drawer_news">News and Weather</string>
    <string name="drawer_canteen">Canteen</string>
    <string name="drawer_persons">Persons</string>
    <string name="drawer_semesterdates">Semester Dates</string>
    <string name="drawer_campus">Campus Maps</string>
    <string name="drawer_imprint">Imprint</string>
    <string name="drawer_timetable">Schedule</string>
    <string name="drawer_myschedule">My Schedule</string>
    <string name="drawer_events">Event Calendar</string>
    <string name="drawer_navigation">Campus Navigation</string>
    <string name="drawer_joboffers">Job Offers</string>
    <string name="reallyClose">Please press back again to exit</string>
    <string name="connection_failed">Connection failed!</string>
    <string name="internal_problems">internal problems</string>
    <string name="error">Error</string>
    <string name="no_data_available">No data available</string>
    <string name="phonebook_firstname">First name</string>
    <string name="phonebook_lastname">Last name</string>
    <string name="phonebook_search">Search</string>
    <string name="semester_periods">Semester Periods</string>
    <string name="semester_holidays">Holidays</string>
    <string name="semester_important_dates">Important Dates</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_news_single">News selection</string>
    <string name="title_activity_employee_information">Contact</string>
    <string name="employee_phone">Phone</string>
    <string name="employee_fax">Fax</string>
    <string name="employee_role">Function</string>
    <string name="employee_division">Faculty</string>
    <string name="employee_mail">Email</string>
    <string name="employee_room">Room</string>
    <string name="timetable_headline">Please select your study program and semester.</string>
    <string name="timetable_study_program">Study program</string>
    <string name="timetable_study_group">Group</string>
    <string name="timetable_term">Semester</string>
    <string name="timetable_button">Apply</string>
    <string name="timetable_input">Please select</string>
    <string name="timetable_error">This program is empty.</string>
    <string name="timetable_save_choice">Save choice</string>
    <string name="timetable_reset">Delete choice</string>
    <string name="timetable_week">Semester Week</string>
    <string name="timetable_error_incomplete">Please set all fields.</string>
    <string name="timetable_restored">Updating timetable failed!\n Saved state gets restored.</string>
    <string name="mail_default_subject">Subject</string>
    <string name="mail_default_text">With kind regards from EAH App</string>
    <string name="network_error">No data found.</string>
    <string name="title_activity_maps">Maps</string>
    <string name="appwidget_news">News list</string>
    <string name="appwidget_news_empty">No data available\nClick to refresh</string>
    <string name="professor">Professor</string>
    <string name="role">Role</string>
    <string name="canteen_food_no_data_available">No data available.\n Retry later.</string>
    <string name="loading">Loading…</string>
    <string name="canteen_no_canteens_selected">Please select one or more canteens under settings first.</string>
    <string name="canteen_update_failed">Could not update menu.</string>
    <string name="canteen_card_balance_status">Your thoska balance: %1$s € (status: %2$s)</string>
    <string name="canteen_card_balance_toast">Your thoska balance: %1$s €</string>
    <string name="canteen_card_error">Card removed before data could be read!</string>
    <string name="canteen_card_info_title">Read thoska balance</string>
    <string name="canteen_card_info_text">
        First, make sure that NFC is enabled on your device.
        \n\n
        To read the balance from your thoska, place the thoska on the back of your device.
        Depending on the model, the NFC sensor is located in the upper, middle or lower part.
        \n\n
        Wait until your thoska is detected. If you need to select the Stundenplan-App to continue,
        do not remove the thoska before selecting the app.</string>
    <string name="myschedule_dialog_headline">Please select study program and semester.</string>
    <string name="myschedule_calendar_empty">No upcoming events!</string>
    <string name="myschedule_overview_empty">You did not compose a schedule.</string>
    <string name="myschedule_dialog_empty">Choose study program and semester.</string>
    <string name="myschedule_last_updated">Last updated: </string>
    <string name="myschedule_connection_failed">Updating your schedule failed!\n Previous state gets restored.</string>
    <string name="today">Today</string>
    <string name="myschedule_overview_headline">My Courses</string>
    <string name="myschedule_settings_studygroups">Study Groups: </string>
    <string name="deleteTimetableTitle">Semester Change</string>
    <string name="deleteTimetableMessageOptional">The semester is over. Do you want to clear your schedule?</string>
    <string name="deleteTimetableMessageForced">A new semester has started. You need to clear your schedule.</string>
    <string name="deleteTimetableConfirm">Clear Schedule</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="fcm_change_title">Timetable Change</string>
    <string name="fcm_timetablechange_message_part1">has changed.</string>
    <string name="fcm_message_part2">Please update your schedule!</string>
    <string name="fcm_examadded_message_part1">Exam added for</string>
    <string name="myschedule_pref_category_mycourses">My Courses</string>
    <string name="myschedule_pref_overview_title">My Schedule (Overview) &#x2026;</string>
    <string name="myschedule_pref_addcourse_title">Add course &#x2026;</string>
    <string name="myschedule_pref_addcourse_summary">Add courses to your schedule</string>
    <string name="myschedule_pref_category_fcm">Notifications</string>
    <string name="myschedule_pref_fcm_title">Push Notifications</string>
    <string name="myschedule_pref_fcm_summary">Notify about timetable changes and added exams</string>
    <string name="myschedule_pref_fcm_error">No permission to receive push notifications</string>
    <string name="myschedule_pref_category_calsync">Calendar Synchronization</string>
    <string name="myschedule_pref_calsync_no_permission" translatable="false">no_calendar_permission</string>
    <string name="myschedule_pref_choose_calendar_title">Choose calendar &#x2026;</string>
    <string name="myschedule_pref_choose_calendar_summary">Select a calendar to synchronize to</string>
    <string name="myschedule_pref_choose_calendar_warning">Changing calendar selection only possible while synchronization is off!</string>
    <string name="myschedule_pref_delete_calendar_entries_title">Delete calendar entries &#x2026;</string>
    <string name="myschedule_pref_delete_calendar_entries" translatable="false">prefDeleteCalendarEntries</string>
    <string name="myschedule_pref_delete_calendar_entries_summary">Delete the My Schedule events from the chosen calendar</string>
    <string name="myschedule_delete_calendar_entries_warning">Please, stop synchronization first.</string>
    <string name="myschedule_pref_calsync_title">Synchronize</string>
    <string name="myschedule_pref_calsync_summary">Sync My Schedule to the chosen calendar</string>
    <string name="myschedule_calsync_warning_no_cal_chosen">You need to select a calendar first!</string>
    <string name="myschedule_calsync_warning_sync_running"> Synchronisation cannot be turned off while calendar is being synchronized!</string>
    <string name="myschedule_calsync_started">Started synchronizing. This can take a few minutes.</string>
    <string name="myschedule_calsync_finished">Calendar synchronized.</string>
    <string name="myschedule_calsync_local_calendar_name">My Schedule</string>
    <string name="myschedule_create_local_calendar">Create new local calendar</string>
    <string name="myschedule_delete_calendar_error">No local calendar found to delete</string>
    <string name="myschedule_calsync_event_dropped_tag">[Dropped]</string>
    <string name="myschedule_calsync_error">No calendar permission</string>
    <string name="myschedule_pref_delete_cal" translatable="false">prefDeleteCal</string>
    <string name="myschedule_pref_delete_cal_no_permission" translatable="false">prefDeleteCalNoPermission</string>
    <string name="myschedule_pref_category_delete_cal">Delete calendar</string>
    <string name="myschedule_pref_title_delete_cal">Delete a calendar &#x2026;</string>
    <string name="myschedule_pref_summary_delete_cal">Choose a calendar on this phone you want to delete</string>
    <string name="toast_exam_added">Exam added</string>
    <string name="toast_merged_event_series_added">Some event series got merged. The new series was added to your schedule.</string>
    <string name="dialog_delete_local_cal_title">Delete local calendar</string>
    <string name="dialog_delete_local_cal_message">Do you want to delete the calendar \"My Schedule\"?</string>
    <string name="dialog_delete_cal_title">Delete calendar</string>
    <string name="dialog_delete_cal_message">Do you really want to delete the calendar \"%1$s\"?</string>
    <string name="dialog_delete_cal_confirm">Delete</string>
    <string name="dialog_delete_calendar_entries_title">Delete calendar entries</string>
    <string name="dialog_delete_calendar_entries_message">Do you want to delete all My Schedule events from the chosen calendar?</string>
    <string name="dialog_delete_calendar_entries_confirm">Delete Events</string>
    <string name="dialog_no">No</string>
    <string name="sp_myschedule_enable_fcm" translatable="false">enable_fcm</string>
    <string name="sp_myschedule_enable_calsync" translatable="false">enable_calsync</string>
    <string name="sp_myschedule_calendar_to_sync_id" translatable="false">chosen_cal_for_calsync</string>
    <string name="sp_myschedule_calendar_to_sync_name" translatable="false">chosen_cal_for_calsync_name</string>
    <string name="imprint_data_protection_link" translatable="false"><a href="https://www.eah-jena.de/datenschutz">Data protection</a></string>
    <string name="notification_error_ssl_cert_invalid">A SSL-Certificate occurred. Do you want to proceed?</string>
    <string name="ssl_error_continue">Continue</string>
    <string name="ssl_error_cancel">Cancel</string>
    <string name="title_scanner_activity">Scanner</string>
    <string name="title_navigation_activity">Navigation</string>
    <string name="error_navigation_room_not_found">Room not found!</string>
    <string name="building_03_02_01">Building 3, 2, 1</string>
    <string name="building_04">Building 4</string>
    <string name="building_05">Building 5</string>
    <string name="building_06">Building 6</string>
    <string name="building_03_02_01_ground">Building 3, 2, 1</string>
    <string name="navigation_dialog_building">Building</string>
    <string name="navigation_dialog_floor">Floor</string>
    <string name="navigation_dialog_room">Room</string>
    <string name="navigation_button_prev_plan">Previous Map</string>
    <string name="navigation_button_next_plan">Next Map</string>
    <string name="navigation_start">From: </string>
    <string name="navigation_dest">To: </string>
    <string name="navigation_current_floorplan">currently displayed:</string>
</resources>