<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (c) 2023-2023 Ernst-Abbe-Hochschule Jena
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without evesetupn the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/myschedule_pref_category_mycourses">

        <Preference
            android:title="@string/myschedule_pref_overview_title"
            app:fragment="de.fhe.fhemobile.fragments.myschedule.MyScheduleOverviewFragment"/>
        <Preference
            android:title="Kurs hinzufügen"
            app:fragment="de.fhe.fhemobile.fragments.myschedule.MyScheduleDialogFragment"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/myschedule_pref_category_fcm">

        <!-- Note: always use SwitchPreferenceCompat (not SwitchPreference)
         to ensure the switch to always look the same, independent of android version -->
        <SwitchPreferenceCompat
            android:key="@string/sp_myschedule_enable_fcm"
            android:title="@string/myschedule_pref_fcm_title"
            android:summary="@string/myschedule_pref_fcm_summary"
            android:defaultValue="true"/>

    </PreferenceCategory>

<!--    <PreferenceCategory-->
<!--        android:title="@string/myschedule_pref_category_calsync">-->

<!--        <ListPreference-->
<!--            android:key="@string/pref_myschedule_available_calendars"-->
<!--            android:title="Ausgewählter Kalender"-->
<!--            android:summary="Wähle einen Kalender, in den synchronisiert werden soll."-->
<!--            />-->

<!--        &lt;!&ndash; Note: always use SwitchPreferenceCompat (not SwitchPreference)-->
<!--         to ensure the switch to always look the same, independent of android version &ndash;&gt;-->
<!--        <SwitchPreferenceCompat-->
<!--            android:key="@string/sp_myschedule_enable_calsync"-->
<!--            android:title="@string/myschedule_pref_sync_title"-->
<!--            android:summary="@string/myschedule_pref_sync_summary"/>-->

<!--    </PreferenceCategory>-->

</androidx.preference.PreferenceScreen>