<!--
  ~  Copyright (c) 2014-2022 Fachhochschule Erfurt, Ernst-Abbe-Hochschule Jena
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->
<de.fhe.fhemobile.views.phonebook.EmployeeInformationView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.fhe.fhemobile.fragments.phonebook.EmployeeInformationFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professor"
                android:id="@+id/employeeName"
                android:layout_marginBottom="12dp"
                android:textSize="@dimen/list_header_big_text_size"
                android:textColor="@color/primary_color" 
                android:textStyle="bold"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_phone"
                    android:id="@+id/textViewPhone"
                    android:textColor="@color/third_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0361-12345678"
                    android:id="@+id/employeePhone"
                    android:textColor="@color/primary_color"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center_vertical"
                android:id="@+id/linearLayout5">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_fax"
                    android:id="@+id/textViewFax"
                    android:textColor="@color/third_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0361-12345678"
                    android:id="@+id/employeeFax"
                    android:textColor="@color/primary_color"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center_vertical"
                android:id="@+id/linearLayout4">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_role"
                    android:id="@+id/textViewRole"
                    android:textColor="@color/third_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/role"
                    android:id="@+id/employeeRole"
                    android:textColor="@color/primary_color"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center_vertical"
                android:id="@+id/linearLayout3">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_mail"
                    android:id="@+id/textViewEMail"
                    android:textColor="@color/third_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="prof@fh-erfurt.de"
                    android:id="@+id/employeeMail"
                    android:textColor="@color/primary_color"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center_vertical"
                android:id="@+id/linearLayout2">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_division"
                    android:id="@+id/textViewDivision"
                    android:textColor="@color/third_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="division"
                    android:id="@+id/employeeDivision"
                    android:textColor="@color/primary_color"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center_vertical"
                android:id="@+id/linearLayout">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_room"
                    android:id="@+id/textViewRoom"
                    android:textColor="@color/third_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5.e.12"
                    android:id="@+id/employeeRoom"
                    android:textColor="@color/primary_color"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</de.fhe.fhemobile.views.phonebook.EmployeeInformationView>
