<?xml version="1.0" encoding="utf-8"?>
<de.fhe.fhemobile.views.navigation.RoomSearchView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="de.fhe.fhemobile.fragments.navigation.RoomSearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:animateLayoutChanges="true"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navigation_dialog_headline"
            android:textSize="@dimen/timetable_headline_textsize"
            />

        <de.fhe.fhemobile.widgets.picker.BuildingPicker
            android:id="@+id/navigationPickerBuilding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/list_single_item_height"
            app:idpHeadline="@string/navigation_dialog_building"
            />

        <de.fhe.fhemobile.widgets.picker.FloorPicker
            android:id="@+id/navigationPickerFloor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/list_single_item_height"
            android:visibility="gone"
            app:idpHeadline="@string/navigation_dialog_floor"
            />

        <de.fhe.fhemobile.widgets.picker.RoomPicker
            android:id="@+id/navigationPickerRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/list_single_item_height"
            android:visibility="gone"
            app:idpHeadline="@string/navigation_dialog_room"
            />


    </LinearLayout>
</de.fhe.fhemobile.views.navigation.RoomSearchView>