<!--
  ~  Copyright (c) 2014-2019 Fachhochschule Erfurt, Ernst-Abbe-Hochschule Jena
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->


<de.fhe.fhemobile.views.navigation.NavigationView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.fhe.fhemobile.fragments.navigation.NavigationFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/list_header_background"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/navigation_text_start"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/navigation_start"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="15dp"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/abc_text_size_medium_material"
                />


            <TextView
                android:id="@+id/navigation_text_dest"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="15dp"
                android:text="@string/navigation_dest"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/abc_text_size_medium_material" />

        </LinearLayout>


        <View style="@style/Divider"/>


        <RelativeLayout
            android:id="@+id/navigation_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageview_floorplan"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center|bottom"
            android:layout_weight="1">

            <TextView
                android:id="@+id/navigation_text_current_floorplan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/navigation_current_floorplan"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/navigationButtonPrevPlan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/navigation_button_prev_plan"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:drawableTop="@drawable/ic_prev_plan"
                    android:background="@drawable/buttonshape_rectangle"
                    android:textAllCaps="false"
                    android:layout_margin="@dimen/margin_top_navigation_dialog_activity"
                    />

                <Button
                    android:id="@+id/navigationButtonNextPlan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/navigation_button_next_plan"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:drawableTop="@drawable/ic_next_plan"
                    android:background="@drawable/buttonshape_rectangle"
                    android:textAllCaps="false"
                    android:layout_margin="@dimen/margin_top_navigation_dialog_activity"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</de.fhe.fhemobile.views.navigation.NavigationView>