<de.fhe.fhemobile.views.phonebook.PhonebookSearchView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.fhe.fhemobile.fragments.phonebook.PhonebookSearchFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" 
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_image_height"
                android:src="@drawable/th_phonebook"
                android:scaleType="centerCrop" 
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:animateLayoutChanges="true" 
                >

                <de.fhe.fhemobile.widgets.FloatLabelLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:floatLabelTextAppearance="@style/TextAppearance.YourApp.FloatLabel">

                    <EditText
                        android:id="@+id/phonebookFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center_horizontal"
                        android:inputType="text|textNoSuggestions|textPersonName"
                        android:ems="10"
                        android:hint="@string/phonebook_firstname"
                        android:textColor="@color/primary_color"
                        />
                    
                </de.fhe.fhemobile.widgets.FloatLabelLayout>

                <de.fhe.fhemobile.widgets.FloatLabelLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:floatLabelTextAppearance="@style/TextAppearance.YourApp.FloatLabel">
                    
                    <EditText
                        android:id="@+id/phoneBookLastName"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center_horizontal"
                        android:inputType="text|textNoSuggestions|textPersonName"
                        android:ems="10"
                        android:hint="@string/phonebook_lastname"
                        android:textColor="@color/primary_color"
                        />
                </de.fhe.fhemobile.widgets.FloatLabelLayout>

                <Button
                    android:id="@+id/phonebookSearchButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/phonebook_search"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_primary"
                    />

                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:id="@+id/progressIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone" 
                    />

                <TextView
                    android:id="@+id/phonebookError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center_horizontal"
                    android:text="@string/network_error"
                    android:textSize="@dimen/list_header_big_text_size"
                    android:textColor="@color/third_color"
                    android:visibility="gone"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</de.fhe.fhemobile.views.phonebook.PhonebookSearchView>
